ajuste de galeria de imagenes con responsive

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>Descubre Estados Unidos</h1>
+        <h1>Estados Unidos</h1>
     </header>
 
     <div class="container">
         <nav class="sidebar">
-            <h2>Índice</h2>
+
             <ul>
                 <li><a href="#galeria">Galería de imágenes</a></li>
                 <li><a href="#lugares">Lugares de interés</a></li>
@@ -25,9 +25,9 @@
             <section id="galeria">
                 <h2>Galería de Imágenes</h2>
                 <div class="imagenes">
-                    <img src="img1.jpg" alt="Imagen de EE.UU.">
-                    <img src="img2.jpg" alt="Imagen de EE.UU.">
-                    <img src="img3.jpg" alt="Imagen de EE.UU.">
+                    <img src="./img/bahia.jpg" alt="RD">
+                    <img src="./img/pico.jpg" alt="RD">
+                    <img src="./img/saona.jpg" alt="RD">
                 </div>
             </section>
 
@@ -35,25 +35,25 @@
                 <h2>Lugares de Interés</h2>
                 <article>
                     <h3>Estatua de la Libertad</h3>
-                    <img src="libertad.jpg" alt="Estatua de la Libertad">
+                    <img src="./img/estatua.jpg" alt="Estatua de la Libertad">
                     <p>Uno de los monumentos más icónicos de EE.UU., ubicado en Nueva York.</p>
                     <p><strong>Ubicación:</strong> Nueva York, NY</p>
                 </article>
                 <article>
                     <h3>Gran Cañón</h3>
-                    <img src="gran_canon.jpg" alt="Gran Cañón">
+                    <img src="./img/gran_canon.jpg" alt="Gran Cañón">
                     <p>Maravilla natural con vistas impresionantes.</p>
                     <p><strong>Ubicación:</strong> Arizona</p>
                 </article>
                 <article>
                     <h3>Parque Nacional Yellowstone</h3>
-                    <img src="yellowstone.jpg" alt="Yellowstone">
+                    <img src="./img/Yellowstone.jpg" alt="Yellowstone">
                     <p>Famoso por sus géiseres y paisajes naturales.</p>
                     <p><strong>Ubicación:</strong> Wyoming, Montana, Idaho</p>
                 </article>
                 <article>
                     <h3>Las Vegas Strip</h3>
-                    <img src="las_vegas.jpg" alt="Las Vegas">
+                    <img src="./img/vegas.jpg" alt="Las Vegas">
                     <p>Zona de entretenimiento con casinos y espectáculos de primer nivel.</p>
                     <p><strong>Ubicación:</strong> Nevada</p>
                 </article>
@@ -79,7 +79,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 Turismo en Estados Unidos</p>
+        <p>Turismo en Estados Unidos_NahuelLund</p>
     </footer>
 </body>
 </html>
