--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Turismo en República Dominicana</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" type="text/css">
+    <link rel="icon" href="./img/flag-regular.svg">
 </head>
 <body>
     <header>
-        <h1>República Dominicana</h1>
+        <h1 id="pais">República Dominicana</h1>
     </header>
 
     <div class="container">
@@ -41,26 +42,26 @@
                 <div class="lugares-grid">
                     <article>
                         <img src="./img/zona_colonial.jpg" alt="Zona Colonial">
-                        <p>Zona Colonial - Santo Domingo</p>
+                        <h4>Zona Colonial - Santo Domingo</h4>
                         <p>Es un Patrimonio de la Humanidad que alberga los primeros vestigios de la colonización europea en América. Con monumentos emblemáticos como la Catedral Primada de América, el Alcázar de Colón y la Fortaleza Ozama, esta área ofrece una mezcla única de historia, cultura, museos y tiendas.</p>
                         <p>Centro histórico del Distrito Nacional, Santo Domingo, República Dominicana.</p>
                     </article>
                     <article>
                         <img src="./img/parque_nacional.jpg" alt="Parque Nacional Los Haitises">
-                        <p>Parque Nacional Los Haitises</p>
+                        <h4>Parque Nacional Los Haitises</h4>
                         <p>Un paraíso ecológico ubicado en la región noreste del país, famoso por sus impresionantes mogotes, cuevas con arte taíno y abundante biodiversidad. Los Haitises es un destino ideal para los amantes de la naturaleza y la aventura, con excursiones en bote a través de sus manglares y visitas a sus cavernas históricas.</p>
                         <p>Ubicación: Provincias de Samaná, Monte Plata y Hato Mayor.</p>
                     </article>
                     
                     <article>
                         <img src="./img/salto_alto.jpg" alt="Salto Alto">
-                        <p>Salto Alto</p>
+                        <h4>Salto Alto</h4>
                         <p>Un hermoso conjunto de tres cascadas ubicadas en Bayaguana, ideales para nadar y disfrutar de la naturaleza. Este destino es perfecto para quienes buscan una experiencia tranquila rodeada de vegetación tropical y aguas cristalinas.</p>
                         <p>Ubicación: Bayaguana, Monte Plata, República Dominicana.</p>
                     </article>
                     <article>
                         <img src="./img/altos.jpg" alt="Altos de Chavón">
-                        <p>Altos de Chavón</p>
+                        <h4>Altos de Chavón</h4>
                         <p>Un pueblo de estilo mediterráneo del siglo XVI construido en la década de 1970. Altos de Chavón es un importante centro cultural con galerías de arte, un museo arqueológico y un anfiteatro que ha recibido a artistas de renombre internacional.</p>
                         <p>Ubicación: La Romana, República Dominicana.</p>
                     </article>
@@ -69,8 +70,11 @@
             
             <section id="mapa">
                 <h2>Mapa de población de la República Dominicana</h2>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2002302.5433265138!2d-71.97387472325493!3d18.73569380712045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ea562bff61b7a4b%3A0x84a23b8d4f1a4e7b!2sRep%C3%BAblica%20Dominicana!5e0!3m2!1ses-419!2sdo!4v1708976729160!5m2!1ses-419!2sdo" width="100%" height="300"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2002302.5433265138!2d-71.97387472325493!3d18.73569380712045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8ea562bff61b7a4b%3A0x84a23b8d4f1a4e7b!2sRep%C3%BAblica%20Dominicana!5e0!3m2!1ses-419!2sdo!4v1708976729160!5m2!1ses-419!2sdo" width="100%" height="400"></iframe>
             </section>
+            <div id="volver">
+                <a href="#pais">Volver al principio</a>
+            </div>
         </main>
 
         <aside class="news">
