centrado de letras en el footer y correccion en el index de noticias

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#galeria">Galería de imágenes</a></li>
                 <li><a href="#lugares">Lugares de interés</a></li>
                 <li><a href="#mapa">Mapa de población</a></li>
+                <li><a href="#noticias">Últimas Noticias</a></li>
             </ul>
         </nav>
 
@@ -78,7 +79,7 @@
         </main>
 
         <aside class="news">
-            <h2>Últimas Noticias</h2>
+            <h2 id="noticias">Últimas Noticias</h2>
             <article>
                 <h3>Plan de desarrollo urbano</h3>
                 <p>El presidente Luis Abinader presentó un plan para ordenar el desarrollo de Santo Domingo.</p>
